--- a/styles/general.css
+++ b/styles/general.css
@@ -2,14 +2,6 @@ body {
   background-color: #2F3152;
   color: #ffffff;
   font-family: Arial, Helvetica, sans-serif;
-}
-
-section {
-  background-color: #41436e;
-  border-radius: 8px;
-  width: 370px;
-}
-
-footer {
-  background-color: #1e1f30;
+  margin: 0;
+  padding: 0;
 }
