--- a/css-basico/style.css
+++ b/css-basico/style.css
@@ -1,6 +1,12 @@
+body {
+  background-color: azure;
+  text-align: center;
+}
+
 img {
-  margin-right: 20px;
-  border: solid;
+  padding: 0 0 100px 0;
+  border: solid 2px gray;
   width: 100px;
   height: 100px;
+  background-color: white;
 }
